[package]
name = "dokan-sys"
version = "0.1.0+dokan131"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Raw FFI bindings for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
keywords = ["ffi", "dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2018"
links = "dokan"
build = "build.rs"

[badges]
appveyor = { repository = "Liryna/dokan-rust" }

[dependencies]
libc = "0.2.66"
winapi = { version = "0.3.8", features = ["std", "basetsd", "fileapi", "minwinbase", "minwindef", "ntdef", "winnt"] }

[build-dependencies]
cc = "1.0.50"

[dev-dependencies]
version-sync = "0.8.1"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
