[package]
name = "dokan-sys"
version = "0.3.1+dokan206"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Raw FFI bindings for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
documentation = "https://dokan-dev.github.io/dokan-rust-doc/html/dokan_sys/"
keywords = ["ffi", "dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2021"
links = "dokan"
build = "build.rs"

[badges]
appveyor = { repository = "Liryna/dokan-rust" }

[dependencies]
libc = "0.2.82"
winapi = { version = "0.3.9", features = ["std", "basetsd", "fileapi", "minwinbase", "minwindef", "ntdef", "winnt"] }

[build-dependencies]
cc = "1.0.66"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
