[package]
name = "dokan"
version = "1.3.1"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Rust-friendly wrapper for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
keywords = ["dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
license = "LGPL-3.0-only"
edition = "2018"

[dependencies]
dokan-sys =  { version = "= 1.3.1", path = "../dokan-sys" }
bitflags = "1.2.1"
widestring = "0.4.0"
winapi = { version = "0.3.8", features = [ "errhandlingapi", "handleapi", "ioapiset", "minwinbase", "minwindef", "ntdef", "ntstatus", "processthreadsapi", "sddl", "securitybaseapi", "synchapi", "winbase", "winerror", "winnt"] }

[dev-dependencies]
lazy_static = "1.4.0"
parking_lot = "0.10.0"
regex = "1.3.4"
