[package]
name = "dokan"
version = "0.1.1+dokan140"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Rust-friendly wrapper for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
documentation = "https://dokan-dev.github.io/dokan-rust-doc/html/dokan/"
keywords = ["dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
appveyor = { repository = "Liryna/dokan-rust" }

[dependencies]
dokan-sys =  { version = "= 0.1.2", path = "../dokan-sys" }
bitflags = "1.2.1"
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["std", "errhandlingapi", "handleapi", "heapapi", "ioapiset", "minwinbase", "minwindef", "ntdef", "ntstatus", "processthreadsapi", "sddl", "securitybaseapi", "synchapi", "winbase", "winerror", "winnt"] }

[dev-dependencies]
clap = "2.33.3"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
regex = "1.4.3"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
